--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 <div class="block white section scrollspy about-me" style="display:inline-flex" id="about_me">
     <div class="container" style="margin:auto"> 
         <div class="row">
-        <div class="col l6 m6 s12">
+        <div class="col l5 m6 s12">
             <p class = "bold section-title">About Me</p>
         <img src="myNewPhoto.png" class="circle hide-on-med-and-down" style="margin:0 auto; display:block">
         <p class = "techfont about-me my-flow-text" style="text-align:center">
             I'm a third-year Computer Science/Mathematical Science double major at <a href="https://www.colby.edu" target="_blank">Colby College</a> in Waterville, Maine. I like what I study and would like to make a career in technology. Currently looking for opportunities following my graduation in spring 2016.  
         </p>
     </div>
-    <div class="col l6 m6 s12">
+    <div class="col l5 offset-l2 m6 s12">
         <p class = "bold section-title">My Interests</p>
         <ul class="collection" id="staggered-list" style="display:none"> 
             <li class="collection-item avatar">
@@ -157,18 +157,18 @@
     <div class="container" style="margin:auto">
     <p class="bold section-title white-text">Education</p>
     
-        <ul class="collection" id="staggered-list-education" style="color:white; background-color:transparent;margin:0 auto; width:70%; margin-top:10%; display:none"> 
+        <ul class="collection" id="staggered-list-education" style="color:black; background-color:transparent;margin:0 auto;display:none"> 
             <li class="collection-item avatar" style="background-color:transparent">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col l2">
+                        <div class="col l2 m4">
                             <img src="trinitySeal.png" class="hide-on-small-only" style="margin-top:10px;" height="75" width="75">
                         </div>
-                        <div class="col s8 offset-s2">
+                        <div class="col l8 offset-l2 m8">
                             <span class="title flow-text valign techfont bold white-text">Trinity College Dublin</span>
-                            <p class="hide-on-med-and-down">Dublin, Ireland</p>
-                            <p class="hide-on-med-and-down">Spring 2015</p>
-                            <p class="hide-on-med-and-down">Study Abroad</p>
+                            <p class="my-flow-text">Dublin, Ireland</p>
+                            <p class="my-flow-text">Spring 2015</p>
+                            <p class="my-flow-text">Study Abroad</p>
                         </div>
                     </div>
                 </div>
@@ -176,14 +176,14 @@
             <li class="collection-item avatar" style="background-color:transparent">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col l2">
+                        <div class="col l2 m4">
                             <img src="colby-seal.png" class="hide-on-small-only" style="margin-top:10px;" height="75" width="75">
                         </div>
-                        <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">Colby College</span>
-                            <p class="hide-on-med-and-down">Waterville, ME</p>
-                            <p class="hide-on-med-and-down">2012-2016</p>
-                            <p class="hide-on-med-and-down">B.A. - Computer Science/Mathematical Science</p>
+                        <div class="col l8 offset-l2 m8">
+                            <span class="title flow-text valign techfont bold white-text">Colby College</span>
+                            <p class="my-flow-text">Waterville, ME</p>
+                            <p class="my-flow-text">2012-2016</p>
+                            <p class="my-flow-text">B.A. - Computer Science/Mathematical Science</p>
                         </div>
                     </div>
                 </div>
@@ -191,14 +191,14 @@
             <li class="collection-item avatar" style="background-color:transparent">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col l2">
+                        <div class="col l2 m4">
                             <img src="noblesSeal.jpg" class="hide-on-small-only circle" style="margin-top:10px;" height="75" width="75">
                         </div>
-                        <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">The Noble and Greenough School</span>
-                            <p class="hide-on-med-and-down">Dedham, MA</p>
-                            <p class="hide-on-med-and-down">2008-2012</p>
-                            <p class="hide-on-med-and-down">Diploma</p>
+                        <div class="col l8 offset-l2 m8">
+                            <span class="title flow-text valign techfont bold white-text">The Noble and Greenough School</span>
+                            <p class="my-flow-text">Dedham, MA</p>
+                            <p class="my-flow-text">2008-2012</p>
+                            <p class="my-flow-text">Diploma</p>
                         </div>
                     </div>
                 </div>
@@ -216,8 +216,8 @@
             </div>
         </div>
 </div>
-    <div class = "block white section scrollspy prof-exp" id="professional_experience">
-        <div class = "container my-flow-text">
+    <div class = "block white section scrollspy prof-exp" id="professional_experience" style="display:inline-flex">
+        <div class = "container my-flow-text" style="margin:auto">
             <p class="bold section-title">Professional Experience</p>
                 <div class="row">
                     <div class="col l2 m3 s12">
