--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container" style="margin:auto">
     <p class="bold section-title white-text">Education</p>
     
-        <ul class="collection" id="staggered-list-education" style="color:black; background-color:transparent;margin:0 auto;display:none"> 
+        <ul class="collection" id="staggered-list-education" style="color:black; background-color:transparent;margin:0 auto;display:none; margin-bottom:40px;"> 
             <li class="collection-item avatar" style="background-color:transparent">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
