--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <title>Daniel Vogel's Webpage</title>
+        <title>Daniel Vogel's Personal Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="DanStyleSheet.css">
        
@@ -11,6 +11,17 @@
         <script src="jquery-1.9.1.min.js"></script>
         <script src="materialize.js"></script>
         <script src="smooth-scroll.js"></script>
+        <script type="text/javascript">
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-65516008-2', 'auto');
+            ga('send', 'pageview');
+
+
+        </script>
 </head>
 <body>
     <div class="parallax-container colby section scrollspy" id="home">
