--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <body>
     <div class="intro-background">
     <div class="background-video">
-      <video autoplay="" loop="" muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);">
+      <!--<video autoplay="" loop="" muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);">
         <source src="berlin-trim.webm" type="video/webm">
         <source src="berlin-trim.mp4" type="video/mp4">
         Video not supported
-      </video>
+      </video>-->
     
-        <div class="col hide-on-med-and-down m3 l2 navbar" id="navbar">
+        <div class="col hide-on-med-and-down m3 l2 navbar" id="navbar" style="position:fixed">
                     <ul class="section table-of-contents fixed">
                         <li><a href="#home" class="black-text" id="home_side">Home</a></li>
                         <li><a href="#about_me" class="black-text" id="about_side">About Me</a></li>
