video should work

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="intro-background">
     <div class="background-video">
       <video autoplay="" loop="" muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);">
-        <source src="berlin-trim.webm" type="video/webm">
-        <source src="berlin-trim.mp4" type="video/mp4">
+        <source src="https://www.dropbox.com/s/ytrz2fwzywd6yks/Berlin-trim.webm?dl=1" type="video/webm">
+        <source src="https://www.dropbox.com/s/ropt37phoacw86c/Berlin-trim.mp4?dl=1" type="video/mp4">
         Video not supported
       </video>
     
