--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 </div>
     <div class="intro-background">
     <div class="background-video">
-      <video autoplay="" loop="" muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);">
-        <source src="https://www.dropbox.com/s/ytrz2fwzywd6yks/Berlin-trim.webm?dl=1" type="video/webm">
-        <source src="https://www.dropbox.com/s/ropt37phoacw86c/Berlin-trim.mp4?dl=1" type="video/mp4">
+      <video autoplay="" loop muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);">
+        <source src="https://www.dropbox.com/s/9rbh2bu5judpi1j/B-Trim2.webm?dl=1" type="video/webm">
+        <source src="https://www.dropbox.com/s/sraqi8z7awilmq5/B-Trim2.mp4?dl=1" type="video/mp4">
         Video not supported
       </video>
     
