--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <script src="jquery-1.9.1.min.js"></script>
         <script src="materialize.js"></script>
         <script src="smooth-scroll.js"></script>
+
         <script src="main.js"></script>
+        <script src="spin.js"></script>
         <script type="text/javascript">
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,7 +23,9 @@
             ga('create', 'UA-65516008-2', 'auto');
             ga('send', 'pageview');
 
-
+        </script>
+        <script type="text/javascript">
+            
         </script>
 </head>
 <body>
@@ -39,7 +43,7 @@
                 </div>
     <div class="intro-background">
     <div class="background-video">
-      <video autoplay="" loop muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);">
+      <video autoplay="" loop muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);"  id="background-vid">
         <source src="https://www.dropbox.com/s/9rbh2bu5judpi1j/B-Trim2.webm?dl=1" type="video/webm">
         <source src="https://www.dropbox.com/s/sraqi8z7awilmq5/B-Trim2.mp4?dl=1" type="video/mp4">
         Video not supported
@@ -59,8 +63,24 @@
                     </div>
                 </div>
                 <div class="center">
-                  <img src="colby-seal.png" class="hide-on-med-and-down" height="200" width="200" onload="Materialize.fadeInImage(this);"/>
-              </div>
+                  <img src="colby-seal.png" class="hide-on-med-and-down" height="200" width="200" style="display:none" id="colby-seal"/>
+                </div>
+                <p class="techfont white-text" style="text-align:center" id="load-text">Loading Video...</p>
+                <div class="preloader-wrapper big active" style="margin:0 auto" id="loader">
+                    <div class="spinner-layer spinner-blue-only">
+
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+            </div>
               <div class="row">
                 <div class="col s4">
                     <h2 class="center-align"><span class="flow-text white-text techfont">Current CS Major.</span></h2>
@@ -327,6 +347,14 @@ $(document).ready(function(){
             })
 
         });
+        var vid = document.getElementById('background-vid');
+            vid.oncanplay = function() {
+                $('#loader').remove();
+                $('#load-text').remove();
+                $('#colby-seal').show();
+                Materialize.fadeInImage($('#colby-seal'));
+            };
+
 });
 
 
