didn't push correctly

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <img src="colby-seal.png" class="hide-on-med-and-down" height="200" width="200" style="display:none" id="colby-seal"/>
                 </div>
                 <p class="techfont white-text" style="text-align:center" id="load-text">Loading Video...</p>
-                <div class="preloader-wrapper big active" style="margin:0 auto" id="loader">
+                <div class="preloader-wrapper big active center" style="margin:0 auto" id="loader">
                     <div class="spinner-layer spinner-blue-only">
 
                         <div class="circle-clipper left">
