git is ticking me off

--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ $(document).ready(function(){
         });
         var vid = document.getElementById('background-vid');
             vid.oncanplay = function() {
+                var gitStinks;
                 $('#loader').remove();
                 $('#load-text').remove();
                 $('#colby-seal').show();
