--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       <video autoplay="" loop muted="" preload="" background="berlin-trim.jpg" class="StretchtoFit" style="transform: translate(0px, 0px);"  id="background-vid">
         <source src="https://www.dropbox.com/s/9rbh2bu5judpi1j/B-Trim2.webm?dl=1" type="video/webm">
         <source src="https://www.dropbox.com/s/sraqi8z7awilmq5/B-Trim2.mp4?dl=1" type="video/mp4">
-        Video not supported
       </video>
     
         
@@ -258,28 +257,28 @@
             <p class="bold section-title">Professional Experience</p>
                 <div class="row">
                     <div class="col l2 m3 s12">
-                        <p class="bold my-flow-text">Capital One</p>
+                        <p class="bold">Capital One</p>
                         <p class="techfont my-flow-text">McLean, VA</p>
                         <p class="techfont my-flow-text">Summer 2015</p>
                         <img src="capOneTech.jpeg" height="75" width="75" class="circle hide-on-med-and-down" style="margin:auto"/>
                     </div>
                     <div class="col l4 m9 s12 exp-border-right">
                         <p class="bold my-flow-text">Software Engineering Intern</p>
-                        <ul class="collection hide-on-small-only">
+                        <ul class="collection">
                             <li class="collection-item no-pad my-flow-text">Develop and package DASH agile reporting tool, to be deployed to open-source community at end of internship.</li>
                             <li class="collection-item no-pad my-flow-text">Implement security alerts in Capital One&#39s Digital Wallet app with the Apple Pay integration team.</li>  
                             <li class="collection-item no-pad my-flow-text">Provision new cloud-based Development environments running on Amazon Web Services with CloudOps team.</li>
                         </ul>
                     </div>
                     <div class="col l2 m3 s12">
-                        <p class="bold my-flow-text">Microsoft</p>
+                        <p class="bold">Microsoft</p>
                         <p class="techfont my-flow-text">Dublin, Ireland</p>
                         <p class="techfont my-flow-text">Spring 2015</p>
                         <img src="microsoftLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12">
                         <p class="bold my-flow-text">Student-Client Programming Project</p>
-                        <ul class="collection hide-on-small-only">
+                        <ul class="collection">
                             <li class="collection-item no-pad my-flow-text">Worked closely with Microsoft&#39s software engineers at the Microsoft Dublin campus to develop a web app for Microsoft&#39s Office App Store.</li>
                             <li class="collection-item no-pad my-flow-text">Participated in weekly code and design reviews with Microsoft&#39s software engineers.</li>  
                             <li class="collection-item no-pad my-flow-text">Published app to Microsoft Office Store at culmination. <a href="https://store.office.com/easy-excel-search-WA104379363.aspx?assetid=WA104379363&sourcecorrid=4f57d547-3d6a-4706-a84d-e269c510fc00&searchapppos=0" target="_blank">Check it out!</a>.</li>
@@ -288,27 +287,27 @@
                 </div>
                 <div class="row">
                     <div class="col l2 m3 s12">
-                        <p class="bold my-flow-text">Colby College</p>
+                        <p class="bold">Colby College</p>
                         <p class="techfont my-flow-text">Waterville, ME</p>
                         <p class="techfont my-flow-text">Spring 2014-Present</p>
                         <img src="colby-seal.png" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12 exp-border-right">
                         <p class="bold my-flow-text">Teaching Assistant - Colby CS Department</p>
-                        <ul class="collection hide-on-small-only">
+                        <ul class="collection">
                             <li class="collection-item no-pad my-flow-text">Aid computer science students with their assignments during weekly office hours.</li>
                             <li class="collection-item no-pad my-flow-text">Serve as a general resource for students taking computer science courses, inside and outside of the computer lab.</li>  
                         </ul>
                     </div>
                     <div class="col l2 m3 s12">
-                        <p class="bold my-flow-text">Unum</p>
+                        <p class="bold">Unum</p>
                         <p class="techfont my-flow-text">Portland, ME</p>
                         <p class="techfont my-flow-text">Summer 2014</p>
                         <img src="unumLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12">
                         <p class="bold my-flow-text">Software Developer Intern</p>
-                        <ul class="collection hide-on-small-only">
+                        <ul class="collection">
                             <li class="collection-item no-pad my-flow-text">Automated several previously manual tasks including daily report analyses and monthly metric generation, saving my department roughly 5 hours per week.</li>
                             <li class="collection-item no-pad my-flow-text">Participated in intern-wide Innovation Challenge, an intensive 6-week project in which interns work in teams to find a problem and devise a technical solution, presenting findings to C-Level Executives at culmination.</li>  
                         </ul>
@@ -349,7 +348,6 @@ $(document).ready(function(){
         });
         var vid = document.getElementById('background-vid');
             vid.oncanplay = function() {
-                var gitStinks;
                 $('#loader').remove();
                 $('#load-text').remove();
                 $('#colby-seal').show();
