resume issue fixed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="row center-align">
-                <a href="Dan_Vog_Resume.pdf" target="_blank"><button type="submit" class="category-button">Resume</button></a>
+                <a href="Dan_Vogel_Resume.pdf" target="_blank"><button type="submit" class="category-button">Resume</button></a>
             </div>
         </div>
         
