--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h2 class="center-align"><span class="flow-text white-text techfont">Current CS Major.</span></h2>
                 </div>
                 <div class="col s4 offset-s4"> 
-                    <h2 class="center-align"><span class="flow-text white-text techfont">Aspiring trophy husband.</span></h2>
+                    <h2 class="center-align"><span class="flow-text white-text techfont">Passionate simplifier.</span></h2>
                 </div>
             </div>
             <div class="row center-align">
