--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <script src="smooth-scroll.js"></script>
 
         <script src="main.js"></script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-65516008-2', 'auto');
+          ga('send', 'pageview');
+
+        </script>
 </head>
 <body>
     
@@ -76,7 +86,7 @@
                     <h2 class="center-align"><span class="flow-text white-text techfont">Current CS Major.</span></h2>
                 </div>
                 <div class="col s4 offset-s4"> 
-                    <h2 class="center-align"><span class="flow-text white-text techfont">Passionate simplifier.</span></h2>
+                    <h2 class="center-align"><span class="flow-text white-text techfont">Passionate about simplification.</span></h2>
                 </div>
             </div>
             <div class="row center-align">
