--- a/index.html
+++ b/index.html
@@ -227,16 +227,6 @@
         </ul>
         </div>
     </div>
-<div class="parallax-container colby" id="soccerShot">
-    <div class="parallax">
-        <img src="trinity-library.jpg">
-    </div>
-    <div class="card darken-1 right parallax-tag" style="top:20%;width:20%">
-        <div class="card-content">
-              <p>The Library at Trinity College Dublin (I just studied abroad here!)</p>
-            </div>
-        </div>
-</div>
     <div class = "block white section scrollspy prof-exp" id="professional_experience" style="display:inline-flex">
         <div class = "container my-flow-text" style="margin:auto">
             <p class="bold section-title">Professional Experience</p>
@@ -245,7 +235,7 @@
                         <p class="bold">Capital One</p>
                         <p class=" my-flow-text">McLean, VA</p>
                         <p class=" my-flow-text">Summer 2015</p>
-                        <img src="capOneTech.jpeg" height="75" width="75" class="circle hide-on-med-and-down" style="margin:auto"/>
+                        <img src="images/capOneTech.jpeg" height="75" width="75" class="circle hide-on-med-and-down" style="margin:auto"/>
                     </div>
                     <div class="col l4 m9 s12 exp-border-right">
                         <p class="bold my-flow-text">Software Engineering Intern</p>
@@ -259,7 +249,7 @@
                         <p class="bold">Microsoft</p>
                         <p class=" my-flow-text">Dublin, Ireland</p>
                         <p class=" my-flow-text">Spring 2015</p>
-                        <img src="microsoftLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
+                        <img src="images/microsoftLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12">
                         <p class="bold my-flow-text">Student-Client Programming Project</p>
@@ -275,7 +265,7 @@
                         <p class="bold">Colby College</p>
                         <p class=" my-flow-text">Waterville, ME</p>
                         <p class=" my-flow-text">Spring 2014-Present</p>
-                        <img src="colby-seal.png" height="75" width="75" class="hide-on-med-and-down">
+                        <img src="images/colby-seal.png" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12 exp-border-right">
                         <p class="bold my-flow-text">Teaching Assistant - Colby CS Department</p>
@@ -288,7 +278,7 @@
                         <p class="bold">Unum</p>
                         <p class=" my-flow-text">Portland, ME</p>
                         <p class=" my-flow-text">Summer 2014</p>
-                        <img src="unumLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
+                        <img src="images/unumLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12">
                         <p class="bold my-flow-text">Software Developer Intern</p>
@@ -300,7 +290,7 @@
                 </div>
         </div>
     </div>
-    <div class="row black center-align">
+    <div class="row black center-align" style="margin-bottom:-5px">
         <span class="white-text techfont">All icons from flaticon.com</span>
     </div>
 </div>
