--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p class = "bold section-title">About Me</p>
         <img src="images/myNewPhoto.png" class="circle" style="margin:0 auto; display:block">
         <p class = "about-me my-flow-text" style="text-align:center">
-            I'm a third-year Computer Science/Mathematical Science double major at <a href="https://www.colby.edu" target="_blank">Colby College</a> in Waterville, Maine. I like what I study and would like to make a career in technology. Currently looking for opportunities following my graduation in spring 2016.  
+            I'm a recent graduate of <a href="https://www.colby.edu" target="_blank" class="about-me">Colby College</a> with a passion for technology and innovation. I currently work for Capital One as a Software Engineer. 
         </p>
     </div>
     <div class="col l5 offset-l2 m6 s12">
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign  bold interest-text">Soccer</span>
-                            <p>Captain, MVP - Colby Men's Soccer (2015)</p>
+                            <p>Captain, MVP - <a href="https://www.colby.edu/athletics/sport/mens-soccer/" target="_blank">Colby Men's Soccer</a> (2015)</p>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign  bold interest-text">Entrepreneurship</span>
-                            <p>First Place - 2016 UMaine $5K Business Challenge</p>
+                            <p>First Place - 2016 <a href="http://mainestartupsinsider.com/2016-winners-umaine-business-challenge/" target="_blank">UMaine $5K Business Challenge</a></p>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign  bold interest-text">Software Development</span>
-                            <p>Founder, Colby Hackers</p>
+                            <p>Founder, <a href="http://colbyhackers.club" target="_blank">Colby Hackers</a></p>
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign  bold interest-text">Mario Kart</span>
-                            <p>Multi-Time Mushroom Cup Champion</p>
+                            <p>Multi-Time <a href="https://i.ytimg.com/vi/NWq2lx8RHtA/maxresdefault.jpg" target="_blank">Mushroom Cup</a> Champion</p>
                         </div>
                     </div>
                 </div>
@@ -179,6 +179,21 @@
     <p class="bold section-title white-text">Education</p>
     
         <ul class="collection" id="staggered-list-education" style="color:black; background-color:transparent;margin:0 auto;display:none; margin-bottom:40px;"> 
+             <li class="collection-item avatar" style="background-color:transparent">
+                <div class="container">
+                    <div class="row" style="margin-bottom:auto;">
+                        <div class="col l2 m4">
+                            <img src="images/colby-seal.png" class="hide-on-small-only" style="margin-top:10px;" height="75" width="75">
+                        </div>
+                        <div class="col l8 offset-l2 m8">
+                            <span class="title flow-text valign  bold white-text">Colby College</span>
+                            <p class="my-flow-text">Waterville, ME</p>
+                            <p class="my-flow-text">2012-2016</p>
+                            <p class="my-flow-text">B.A. - Computer Science/Mathematical Science</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
             <li class="collection-item avatar" style="background-color:transparent">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
@@ -190,21 +205,6 @@
                             <p class="my-flow-text">Dublin, Ireland</p>
                             <p class="my-flow-text">Spring 2015</p>
                             <p class="my-flow-text">Study Abroad</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar" style="background-color:transparent">
-                <div class="container">
-                    <div class="row" style="margin-bottom:auto;">
-                        <div class="col l2 m4">
-                            <img src="images/colby-seal.png" class="hide-on-small-only" style="margin-top:10px;" height="75" width="75">
-                        </div>
-                        <div class="col l8 offset-l2 m8">
-                            <span class="title flow-text valign  bold white-text">Colby College</span>
-                            <p class="my-flow-text">Waterville, ME</p>
-                            <p class="my-flow-text">2012-2016</p>
-                            <p class="my-flow-text">B.A. - Computer Science/Mathematical Science</p>
                         </div>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
                         <img src="images/microsoftLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
                     <div class="col l4 m9 s12">
-                        <p class="bold my-flow-text">Student-Client Programming Project</p>
+                        <p class="bold my-flow-text">Software Engineering Co-op</p>
                         <ul class="collection">
                             <li class="collection-item no-pad my-flow-text">Worked closely with Microsoft&#39s software engineers at the Microsoft Dublin campus to develop a web app for Microsoft&#39s Office App Store.</li>
                             <li class="collection-item no-pad my-flow-text">Participated in weekly code and design reviews with Microsoft&#39s software engineers.</li>  
