resume link change

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div style="position:absolute; left:50%; bottom:20%">
                  <div style="position: relative; left: -50%;">
-                    <a href="Dan_Vogel_Resume.pdf" target="_blank"><button type="submit" class="category-button techfont">Resume</button></a>
+                    <a href="images/Dan_Vogel_Resume.pdf" target="_blank"><button type="submit" class="category-button techfont">Resume</button></a>
                 </div>    
             </div>
 
